# clyde

./: CMakeLists.txt  Makefile
src/: clyde.cpp  clyde.h  main.cpp
